[package]
name = "ham_sdr"
version = "0.1.0"
authors = ["William Speirs <bill.speirs@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
simple_logger = "1.0"
num = "0.2"
byteorder = "1.3"
sdr = "0.7.0"

rs-libhackrf = { path = "/home/wspeirs/src/rs-libhackrf" }

[patch.crates-io]
sdr = { path = "/home/wspeirs/src/sdr-rs" }